# Neat-802.1X-2025.06.23-CLI-client-Repackaged-edition

./: pyproject.toml
.github/workflows/: main.yml
neat_dot1x_client/: __init__.py  cli.py  doc.py  web_api.py
test/: ca.py  example.py  fake-root-ca.key  fake-root-ca.pem  fake_request_handler.py  test_api.py  test_cli.py  test_example.py  test_hostname.py  test_init_wifi.py
